Trying to fix visual bugs on ios devices

--- a/book.css
+++ b/book.css
@@ -10,6 +10,7 @@
     color: white;
     filter: drop-shadow(7px 7px 12px black);
     transition-duration: 0.2s;
+    position: relative;
 }
 
 .bookTop {
@@ -22,8 +23,8 @@
     width: 170px;
     text-align: left;
     position: absolute;
-    bottom: 15px;
     left: 15px;
+    bottom: 15px;
 }
 
 .bookTitle {
